JENKINS-28641 Allow for custom command shell